Add browser commands link; modify text of navigation commands link

--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@ search_box.submit()</code></pre>
   </ul></li>
  <li><a href=java.html#the_java_support_package>The Java support package</a>
   <ul>
-   <li><a href=java.html#browser_navigation>Browser navigation</a>
+   <li><a href=java.html#browser_commands>Browser commands</a>
+   <li><a href=java.html#navigation_commands>Navigation commands</a>
    <li><a href=java.html#working_with_colours>Working with colours</a>
    <li><a href=java.html#working_with_select_elements>Working with select elements</a>
    <li><a href=java.html#mouse_and_keyboard_actions_in_detail>Mouse and keyboard actions in detail</a>
