Fix spelling of programmatically

--- a/wd.html
+++ b/wd.html
@@ -232,7 +232,7 @@ driver = Selenium::WebDriver.for :chrome</code></pre>
 driver = Selenium::WebDriver.for :firefox</code></pre>
 
 <p>If you prefer not to set geckodriver's location using PATH,
- set the geckodriver binary location progmatically:
+ set the geckodriver binary location programmatically:
 
 <pre><code class=java>System.setProperty("webdriver.gecko.driver", "/path/to/geckodriver");</code></pre>
 
