--- a/wd.html
+++ b/wd.html
@@ -231,6 +231,15 @@ driver = Selenium::WebDriver.for :chrome</code></pre>
 <pre><code class=rb>require "selenium-webdriver"
 driver = Selenium::WebDriver.for :firefox</code></pre>
 
+<p>If you prefer not to set geckodriver's location using PATH,
+ set the geckodriver binary location programmatically:
+
+<pre><code class=java>System.setProperty("webdriver.gecko.driver", "/path/to/geckodriver");</code></pre>
+
+<p>It is also possible to set the property at run time:
+ 
+<pre><code class=shell>mvn test -Dwebdriver.gecko.driver=/path/to/geckodriver</code></pre>
+
 <p>It is currently possible to revert to the older, more feature complete
  Firefox driver, by installing Firefox
  <a href="https://ftp.mozilla.org/pub/firefox/releases/47.0.1/">47.0.1</a>
