use resolveable host name for seconf for now
Fixes #148

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <p>Selenium brings together browser vendors, engineers, and enthusiasts
  to further an open discussion around automation of the web platform.
- The project organises <a href="http://www.seleniumconf.org/">an annual conference</a>
+ The project organises <a href="http://seleniumconf.com/">an annual conference</a>
  to teach and nurture the community.
 
 <p>At the core of Selenium is <em><a href=wd.html>WebDriver</a></em>,
