Add outline for ie.enableFullPageScreenshot

--- a/drivers.html
+++ b/drivers.html
@@ -18,6 +18,10 @@
 
 <h3>Internet Explorer</h3>
 
+<h4>ie.enableFullPageScreenshot</h4>
+<p>If set to true, Internet Explorer wil be resized on screenshot so the
+ full height of the page can be captured.
+
 <h4>fileUploadDialogTimeout</h4>
 
 <p>In some environments, Internet Explorer may timeout when opening the
