--- a/drivers.html
+++ b/drivers.html
@@ -13,6 +13,27 @@
 
 <h2>Shared capabilities</h2>
 
+<h3>pageLoadStrategy</h3>
+<p>When navigating to a new page via URL, by default Selenium will wait
+ until the page has fully loaded before responding. This works well for
+ beginners, but can cause long wait times on pages that load a large
+ number of third party resources. Using a non default strategy can make
+ test execution faster in cases like this, but can also introduce flakiness
+ where elements on the page change position as elements load in and change
+ size.
+
+ <p>The page load strategy queries the
+ <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document/readyState">
+  document.readyState</a> as described in the table below:
+<table>
+ <tr><th>Strategy</th><th>Ready State</th><th>Notes</th></tr>
+ <tr><td>normal</td><td>complete</td><td>Used by default, waits for all
+  resources to download</td></tr>
+ <tr><td>eager</td><td>interactive</td><td>DOM access is ready, but other
+  resources like images may still be loading</td></tr>
+ <tr><td>none</td><td>Any</td><td>Does not block WebDriver at all</td></tr>
+</table>
+
 
 <h2>Driver specific capabilities</h2>
 
