Typos fixes in html-runner.html

--- a/html-runner.html
+++ b/html-runner.html
@@ -47,10 +47,10 @@ Test Suite example:
   &lt;title&gt;Test Suite&lt;/title&gt;
 &lt;/head&gt;
 &lt;body&gt;
-&lt;table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"&qt;&lt;tbody&gt;
-&lt;tr&qt;&lt;td&qt;&lt;b&qt;Test Suite&lt;/b&qt;&lt;/td&qt;&lt;/tr&gt;
+&lt;table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"&gt;&lt;tbody&gt;
+&lt;tr&gt;&lt;td&gt;&lt;b&gt;Test Suite&lt;/b&gt;&lt;/td&gt;&lt;/tr&gt;
 &lt;tr&gt;&lt;td&gt;&lt;a href="YOUR-TEST-SCENARIO.html"&gt;YOUR-TEST-SCENARIO&lt;/a&gt;&lt;/td&gt;&lt;/tr&gt;
-&lt;/tbody&qt;&lt;/table&gt;
+&lt;/tbody&gt;&lt;/table&gt;
 &lt;/body&gt;
 &lt;/html&gt;
 
